machine + question + start cadeau

--- a/app/templates/codes.hbs
+++ b/app/templates/codes.hbs
@@ -13,10 +13,10 @@
 
 	<div class="row mb-2">
 		<div class="col text-center">
-			<input type="text" class="number_input" />
-			<input type="text" class="number_input" />
-			<input type="text" class="number_input" />
-			<input type="text" class="number_input" />
+			<input type="text" class="number_input single-line" />
+			<input type="text" class="number_input single-line" />
+			<input type="text" class="number_input single-line" />
+			<input type="text" class="number_input single-line" />
      	</div>
 	</div>
 	
