--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -3,6 +3,15 @@
 	width: 50px;
 	height: 50px;
 }
+
+.gift_box {
+	width: 50px;
+}
+
+.empty-gift {
+	border-bottom: 1px solid #000000;
+}
+
 .color-grey {
 	background-color: LightGray;
 }
@@ -47,7 +56,7 @@
 	background-color: LightBlue;
 }
 
-input[type=text] {
+.single-line {
     background: transparent;
     border: none;
     border-bottom: 1px solid #000000;
