--- a/app/templates/friends.hbs
+++ b/app/templates/friends.hbs
@@ -15,7 +15,7 @@
 		<div class="col">
 			<ul class="list-group text-center">
 			  <li class="list-group-item" {{on "click" this.startGame}}><span class="mr-2">Commencer la partie</span>{{fa-icon "play"}}</li>
-			  <li class="list-group-item"><span class="mr-2">Machine</span>{{fa-icon "cog"}}</li>
+			  <li class="list-group-item"><LinkTo @route="machines" class="text-dark"><span class="mr-2">Machine</span>{{fa-icon "cog"}}</LinkTo></li>
 			  <li class="list-group-item"><LinkTo @route="codes" class="text-dark"><span class="mr-2">Code</span>{{fa-icon "lock"}}</LinkTo></li>
 			  <li class="list-group-item text-dark"><LinkTo @route="hints" class="text-dark"><span class="mr-2">Indices</span>{{fa-icon "lightbulb"}}</LinkTo></li>
 			  <li class="list-group-item" {{on "click" this.addPenality}}><span class="mr-2">Pénalié</span>{{fa-icon "skull-crossbones"}}</li>
