change to input number + fix gift machine

--- a/app/templates/hints.hbs
+++ b/app/templates/hints.hbs
@@ -17,7 +17,7 @@
 			  <div class="input-group-prepend">
 			    <span class="input-group-text" id="card-number">Carte #</span>
 			  </div>
-			  {{input type="text" class="form-control" id="card-number" value=cardNumber}}
+			  {{input type="number" class="form-control" id="card-number" value=cardNumber}}
 			</div>
 			<button type="submit" class="btn btn-primary float-right mt-2" {{on "click" this.fetchHints}}>Ok</button>
 		</div>
