--- a/app/templates/gift.hbs
+++ b/app/templates/gift.hbs
@@ -12,26 +12,26 @@
 	</div>
 
 	<div class="row">
-		<div class="col">
+		<div class="col" id="result-box">
 			<div class="box">
 				<img src="assets/images/green_square.png" class="gift_box">
      	 	</div>
      	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift">
+     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift">
+     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift">
+     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift">
+     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift">
+     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
 				
      	 	</div>
 		</div>
@@ -46,23 +46,23 @@
 
 	<div class="row mb-3" id="empty-gift-row">
 		<div class="col text-center">
-			<div class="box">
-				<img src="assets/images/blue_hexagon.png" class="gift_box" {{on "click" (fn this.moveImageUp "blue_hexagon")}}>
+			<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/blue_hexagon.png" class="gift_box" >
      	 	</div>
-     	 	<div class="box">
-				<img src="assets/images/yellow_trapeze.png" class="gift_box" {{on "click" (fn this.moveImageUp "yellow_trapeze")}}>
+     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/yellow_trapeze.png" class="gift_box">
      	 	</div>
-     	 	<div class="box">
-				<img src="assets/images/green_circle.png" class="gift_box" {{on "click" (fn this.moveImageUp "green_circle")}}>
+     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/green_circle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box">
-				<img src="assets/images/red_triangle.png" class="gift_box" {{on "click" (fn this.moveImageUp "red_triangle")}}>
+     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/red_triangle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box">
-				<img src="assets/images/blue_triangle.png" class="gift_box" {{on "click" (fn this.moveImageUp "blue_triangle")}}>
+     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/blue_triangle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box">
-				<img src="assets/images/yellow_square.png" class="gift_box" {{on "click" (fn this.moveImageUp "yellow_square")}}>
+     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+				<img src="assets/images/yellow_square.png" class="gift_box">
      	 	</div>
 		</div>
 	</div>
