--- a/app/templates/hints.hbs
+++ b/app/templates/hints.hbs
@@ -17,7 +17,7 @@
 			  <div class="input-group-prepend">
 			    <span class="input-group-text" id="card-number">Carte #</span>
 			  </div>
-			  {{input type="number" class="form-control" id="card-number" value=cardNumber}}
+			  {{input type="text" class="form-control" id="card-number" value=cardNumber}}
 			</div>
 			<button type="submit" class="btn btn-primary float-right mt-2" {{on "click" this.fetchHints}}>Ok</button>
 		</div>
@@ -37,11 +37,11 @@
 	<div class="row mb-3 mt-3">
 		<div class="col text-center">
 			<div class="alert alert-success" role="alert">
-			  {{firstClue}}
+			  {{this.firstClue}}
 			</div>
-			{{#unless this.secondClue}}
+			{{#if this.showMore}}
 			<button type="button" class="btn btn-primary" {{on "click" this.secondHint}}>Prochain Indice</button>
-			{{/unless}}
+			{{/if}}
 		</div>
 	</div>
 	{{/if}}
@@ -50,11 +50,11 @@
 	<div class="row mb-3 mt-3">
 		<div class="col text-center">
 			<div class="alert alert-success" role="alert">
-			  {{secondClue}}
+			  {{this.secondClue}}
 			</div>
-			{{#unless this.thirdClue}}
+			{{#if this.showMore}}
 			<button type="button" class="btn btn-primary" {{on "click" this.thirdHint}}>Prochain Indice</button>
-			{{/unless}}
+			{{/if}}
 		</div>
 	</div>
 	{{/if}}
@@ -63,7 +63,7 @@
 	<div class="row mb-3 mt-3">
 		<div class="col text-center">
 			<div class="alert alert-success" role="alert">
-			  {{thirdClue}}
+			  {{this.thirdClue}}
 			</div>
 		</div>
 	</div>
