add airport + football

--- a/app/templates/gift.hbs
+++ b/app/templates/gift.hbs
@@ -16,22 +16,22 @@
 			<div class="box">
 				<img src="assets/images/green_square.png" class="gift_box">
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
-     	 	<div class="box empty-gift" {{on "click" (fn this.moveImageDown)}}>
+     	 	<div class="box empty-gift" {{on "click" this.moveImageDown}}>
 				
      	 	</div>
 		</div>
@@ -46,22 +46,22 @@
 
 	<div class="row mb-3" id="empty-gift-row">
 		<div class="col text-center">
-			<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+			<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/blue_hexagon.png" class="gift_box" >
      	 	</div>
-     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+     	 	<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/yellow_trapeze.png" class="gift_box">
      	 	</div>
-     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+     	 	<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/green_circle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+     	 	<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/red_triangle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+     	 	<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/blue_triangle.png" class="gift_box">
      	 	</div>
-     	 	<div class="box mb-4" {{on "click" (fn this.moveImageUp)}}>
+     	 	<div class="box mb-4" {{on "click" this.moveImageUp}}>
 				<img src="assets/images/yellow_square.png" class="gift_box">
      	 	</div>
 		</div>
