fix typo + remove unless text

--- a/app/templates/friends.hbs
+++ b/app/templates/friends.hbs
@@ -18,7 +18,7 @@
 			  <li class="list-group-item"><LinkTo @route="machines" class="text-dark"><span class="mr-2">Machine</span>{{fa-icon "cog"}}</LinkTo></li>
 			  <li class="list-group-item"><LinkTo @route="codes" class="text-dark"><span class="mr-2">Code</span>{{fa-icon "lock"}}</LinkTo></li>
 			  <li class="list-group-item text-dark"><LinkTo @route="hints" class="text-dark"><span class="mr-2">Indices</span>{{fa-icon "lightbulb"}}</LinkTo></li>
-			  <li class="list-group-item" {{on "click" this.addPenality}}><span class="mr-2">Pénalié</span>{{fa-icon "skull-crossbones"}}</li>
+			  <li class="list-group-item" {{on "click" this.addPenality}}><span class="mr-2">Pénalité</span>{{fa-icon "skull-crossbones"}}</li>
 			</ul>
 		</div>
 	</div>
