Add code and spell to new unlock

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,9 +2,9 @@
     <h1>Bienvenue aux Unlocks de Max</h1>
     <h4>Choisir votre version:</h4>
     <div class="card" style="width: 18rem;" >
-	  <img src="assets/images/friendsMain.jpg" class="card-img-top" alt="Friends Unlock">
+	  <img src="assets/images/harryPotterMain.jpg" class="card-img-top" alt="Harry Potter Unlock">
 	  <div class="card-body">
-	    <LinkTo @route="friends" class="btn btn-primary stretched-link">Go</LinkTo>
+	    <LinkTo @route="harry" class="btn btn-primary stretched-link">Go</LinkTo>
 	  </div>
 	</div>
 </div>
