add memory machine

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -8,8 +8,34 @@
 	width: 50px;
 }
 
+.mbox {
+	display: inline-block;
+	width: 66px;
+	height: 66px;
+}
+
+.memory_box {
+	width: 66px;
+}
+
 .empty-gift {
 	border-bottom: 1px solid #000000;
+}
+
+.hidden-memory {
+	padding: 66px 66px 0px 0px;
+	background: url('/assets/images/unknown.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
+}
+
+.empty-memory {
+	padding: 66px 66px 0px 0px;
+	background: url('/assets/images/empty.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
 }
 
 .color-grey {
