--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -32,7 +32,7 @@
 
 .empty-memory {
 	padding: 66px 66px 0px 0px;
-	background: url('assets/images/empty.png');
+	background: url('/images/empty.png');
 	background-size:auto; 
 	width:0px; 
 	height: 0px !important;
