change css relative path v4

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -24,7 +24,7 @@
 
 .hidden-memory {
 	padding: 66px 66px 0px 0px;
-	background: url('/assets/images/unknown.png');
+	background: url('/Unlock/assets/images/unknown.png');
 	background-size:auto; 
 	width:0px; 
 	height: 0px !important;
@@ -33,6 +33,38 @@
 .empty-memory {
 	padding: 66px 66px 0px 0px;
 	background: url('Unlock/assets/images/empty.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
+}
+
+.hidden-memory2 {
+	padding: 66px 66px 0px 0px;
+	background: url('/assets/images/unknown.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
+}
+
+.empty-memory2 {
+	padding: 66px 66px 0px 0px;
+	background: url('assets/images/empty.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
+}
+
+.hidden-memory3 {
+	padding: 66px 66px 0px 0px;
+	background: url('/images/unknown.png');
+	background-size:auto; 
+	width:0px; 
+	height: 0px !important;
+}
+
+.empty-memory3 {
+	padding: 66px 66px 0px 0px;
+	background: url('images/empty.png');
 	background-size:auto; 
 	width:0px; 
 	height: 0px !important;
