--- a/app/templates/memoire.hbs
+++ b/app/templates/memoire.hbs
@@ -11,6 +11,14 @@
 		</div>
 	</div>
 
+	<div class="row mb-2">
+		<div class="col text-center">
+		    <p class="card-text">
+		    	Vous devez trouver les paires d’arbre avant que Lupin ne vous dévore!
+		    </p>
+		</div>
+	</div>
+
 	<div class="row">
 		<div class="col" id="memory-full-box">
 			{{#each this.memoryCardList as |memoryCard|}}
