--- a/app/templates/chiffre.hbs
+++ b/app/templates/chiffre.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/25.jpg">
+     	 	  <img src="assets/images/25.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	Pour vous déplacer entre les cases, il vous faut plus ou moins 1 de différence entre les chiffres inscrits sur les cases adjacentes. Le jeu semble avoir besoin d’un code à quatre chiffres pour l’ouvrir. Quel est-il?
