--- a/app/templates/echec.hbs
+++ b/app/templates/echec.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/92.jpg">
+     	 	  <img src="assets/images/92.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	 Sur quelle case Harry doit-il poser son roi afin d’être sain et sauf?
