fit image to width

--- a/app/templates/empreinte.hbs
+++ b/app/templates/empreinte.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/88.jpg">
+     	 	  <img src="assets/images/88.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	Des empreintes au sol! Derrière quelle porte est allé Sirius?
