--- a/app/templates/escalier.hbs
+++ b/app/templates/escalier.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/50.jpg">
+     	 	  <img src="assets/images/50.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	Les escaliers pivotent! Il faut créer un chemin entre la Grande Salle et le portrait de La Grosse Dame. Aucun escalier ne peut rester incomplet. Est-ce terminé?
