--- a/app/templates/hagrid.hbs
+++ b/app/templates/hagrid.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/94.jpg">
+     	 	  <img src="assets/images/94.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	L’encre révèle une carte unique, laquelle de ces huttes appartient à Hagrid?
