--- a/app/templates/patronus.hbs
+++ b/app/templates/patronus.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/41.jpg">
+     	 	  <img src="assets/images/41.jpg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	Sirius appelle à l’aide grâce à son patronus. Mais lequel est le sien?
