--- a/app/templates/souvenir.hbs
+++ b/app/templates/souvenir.hbs
@@ -14,7 +14,7 @@
 	<div class="row mb-2">
 		<div class="col text-center">
      	 	<div class="card">
-     	 	  <img src="assets/images/63.jpeg">
+     	 	  <img src="assets/images/63.jpeg" style="width: 100%; height: auto;">
 			  <div class="card-body">
 			    <p class="card-text">
 			    	Aidez Harry à dissocier la réalité en fouillant dans ses souvenirs. À trois reprises il se souvient avoir vu Hermione l’espionner. Quel est le numéro des trois cartes?
