Add multiple unlock possible
Make it so we can have multiple unlock at same time

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -4,7 +4,13 @@
     <div class="card" style="width: 18rem;" >
 	  <img src="assets/images/harryPotterMain.jpg" class="card-img-top" alt="Harry Potter Unlock">
 	  <div class="card-body">
-	    <LinkTo @route="harry" class="btn btn-primary stretched-link">Go</LinkTo>
+	    <button class="btn btn-primary stretched-link" {{action "setUnlock" "harry"}}>Go</button>
+	  </div>
+	</div>
+	<div class="card" style="width: 18rem;" >
+	  <img src="assets/images/jumanjiMain.jpg" class="card-img-top" alt="Jumanji Unlock">
+	  <div class="card-body">
+	    <button class="btn btn-primary stretched-link" {{action "setUnlock" "jumanji"}}>Go</button>
 	  </div>
 	</div>
 </div>
