--- a/app/templates/codes.hbs
+++ b/app/templates/codes.hbs
@@ -13,10 +13,7 @@
 
 	<div class="row mb-2">
 		<div class="col text-center">
-			<input type="number" class="number_input single-line" />
-			<input type="number" class="number_input single-line" />
-			<input type="number" class="number_input single-line" />
-			<input type="number" class="number_input single-line" />
+			<input type="number" class="number_input" />
      	</div>
 	</div>
 	
