--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -2,15 +2,9 @@
     <h1>Bienvenue aux Unlocks de Max</h1>
     <h4>Choisir votre version:</h4>
     <div class="card" style="width: 18rem;" >
-	  <img src="assets/images/harryPotterMain.jpg" class="card-img-top" alt="Harry Potter Unlock">
+	  <img src="assets/images/marioMain.jpg" class="card-img-top" alt="Mario Unlock">
 	  <div class="card-body">
-	    <button class="btn btn-primary stretched-link" {{action "setUnlock" "harry"}}>Go</button>
-	  </div>
-	</div>
-	<div class="card" style="width: 18rem;" >
-	  <img src="assets/images/jumanjiMain.jpg" class="card-img-top" alt="Jumanji Unlock">
-	  <div class="card-body">
-	    <button class="btn btn-primary stretched-link" {{action "setUnlock" "jumanji"}}>Go</button>
+	    <button class="btn btn-primary stretched-link" {{action "setUnlock" "mario"}}>Go</button>
 	  </div>
 	</div>
 </div>
