--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -113,3 +113,69 @@
 .gameover-choice .col {
 	height: 50px;
 }
+
+.green-question {
+	color: green;
+	margin-right: 5px;
+}
+
+.yoshi {
+	heigth: 50px;
+	width: 50px;
+	color: red;
+}
+
+.yoshi {
+  display: inline-block;
+  height: 50px;
+  width: 50px;
+  margin-bottom: 15px;
+  border: none;
+  clear: both;
+}
+
+.yoshi-white {
+  background-color: white;
+}
+
+.yoshi-yellow {
+  background-color: yellow;
+}
+
+.yoshi-blue {
+  background-color: blue;
+}
+
+.yoshi-pink {
+  background-color: pink;
+}
+
+.yoshi-red {
+  background-color: red;
+}
+
+.yoshi-green {
+  background-color: green;
+}
+
+.yoshi-cyan {
+  background-color: cyan;
+}
+
+.yoshi-black {
+  background-color: black;
+}
+
+.border {
+  border-width: 4px !important;
+}
+
+#monde-select, #tableau-select {
+	margin-left: 15px;
+	margin-right: 15px;
+}
+
+.column-select {
+	margin-left: 5px;
+	margin-right: 15px;
+}
