--- a/app/templates/gameover.hbs
+++ b/app/templates/gameover.hbs
@@ -9,6 +9,9 @@
 		<div class="col text-center">
 			<h3>Game Over</h3>
 		</div>
+		<div class="col text-right">
+			<a href="#" {{action "resetQuestions"}}>Reset</a>
+		</div>
 	</div>
 
 
